tests/fixtures/invalid/max_one_arg.py
# max() requires at least 2 arguments
print(max(1))
